WebHelpers ChangeLog
====================

tip (development version)
-------------------------

* webhelpers.feedgenerator:

 - Allow ``RssFeed`` base class to be instantiated. However, it sets the RSS
   version attribute to "?", which is probably invalid.

* webhelpers.html.grid  / webhelpers.pylonslib.grid:

 - A new ``ListGrid`` class to turn a list of lists into a table.
 - Bugfixes by Ergo.

* webhelpers.misc:

 - New ``format_exception`` helper to display an exception as Python would but
   without the traceback.

1.0b7 (2010-05-16)
------------------

* webhelpers.containers:

  - Bugfix in ``canada_provinces``, reported by rpetrello.

* webhelpers.html.grid / webhelpers.pylonslib.grid:

  - Updates by Ergo, mainly styling and CSS classes.
  - Rename classes: ObjectGrid, PylonsGrid, PylonsObjectGrid.

* webhelpers.paginate:

 - New URL generation algorithm for ``Page.pager()``. You can pass a callback
   function to the constructor, or it will fall back to ``pylons.url.current``
   or ``routes.url_for`` (in that order). It will raise ``NotImplementedError`` if
   none of these are available.
 - Don't allow extra positional args in constructor. The implementation does
   nothing with them, so it shouldn't allow them.
 - Import ``sqlalchemy.orm`` as well as ``sqlalchemy``. User Sybiam reports an
   error otherwise.
 - Add code to work with other iterable containers, contributed by Marcin
   Kuzminski.

* webhelpers.pylonslib.flash:

  - New argument ``ignore_duplicate`` to prevent adding the same message
    multiple times.


1.0b6 (2010-04-23)
------------------

* webhelpers.containers / webhelpers.misc:

  - ``NotGiven`` moved to webhelpers.misc.

* webhelpers.html.grid / webhelpers.pylonslib.grid:

  - Updates by Ergo, including SQLAlchemy object grid classes.

* webhelpers.misc:

  - New function ``deprecate``.

* webhelpers.number:

  - New functions ``format_data_size``, ``format_byte_size``, and